--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,10 @@ body {
   color: black;
   background-color: white;
 }
+.hero_bg {
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(242, 235, 243) 0%,
+    rgb(234, 241, 249) 90.1%
+  );
+}
